--- a/src/app/pages/PropertyDetails/reverse-section/reverse-section.component.css
+++ b/src/app/pages/PropertyDetails/reverse-section/reverse-section.component.css
@@ -4,10 +4,11 @@
   border-radius: 16px;
   padding: 24px;
   width: 100%;
-  max-width: 370px;
+  max-width: 360px;
   position: relative;
   transition: top 0.3s ease;
 
+  margin-left: 10px;
 
   position: sticky;
   top: 100px; 
@@ -63,18 +64,18 @@
   .check-btn {
     margin-top: 20px;
     width: 100%;
-    background-color: #ff385c;
     color: white;
     border: none;
-    padding: 14px;
-    font-size: 16px;
+    padding: 13px;
+    font-size: 1.1rem;
     font-weight: bold;
-    border-radius: 10px;
+    border-radius: 20px;
     cursor: pointer;
     transition: background 0.3s ease;
-
+    background: linear-gradient(90deg, #d94659, #e8047a); /* Gradient from a darker to a brighter pink */
+    transition: background 0.3s ease, opacity 0.3s ease;
     &:hover {
-      background-color: #e61e4d;
+      background-color: #e2859b;
     }
   }
 
@@ -82,10 +83,11 @@
 
 /* Rare Find Badge */
 .rare-find-badge {
-  background-color: #f9f9f9;
+  background: #F2F2F2;
+
   border-radius: 12px;
-  padding: 10px;
-  margin-left: 20px;
+  padding: 13px;
+  margin-left: 15px;
   text-align: center;
 }
 
@@ -110,3 +112,43 @@
   color: #171616;
 } 
 
+
+
+
+
+
+
+
+
+
+.button-subtext {
+    color: #3b3b3b; /* Grey color for the subtext */
+    font-size: 0.9rem; /* Smaller font size for the subtext */
+    text-align: center; /* Center the subtext */
+    margin-top: 8px; /* Add some space between the button and the text */
+}
+
+.report-listing {
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Center horizontally */
+    gap: 8px; /* Space between icon and text */
+    margin-top: 15px; /* Space from the button section */
+    font-size: 0.9rem;
+    color: #202020; /* Default text color */
+}
+
+.report-listing .fa-flag {
+    color: #292828; /* Color of the flag icon */
+}
+
+.report-listing .report-link {
+    color: #201f1f; /* Link color matching the text */
+    text-decoration: underline; /* Underline the link */
+    font-weight: 600; /* Make the link text bold */
+    transition: color 0.2s ease;
+}
+
+.report-listing .report-link:hover {
+    color: #484646; /* Slightly darker on hover */
+}
