--- a/src/app/pages/property-info/property-info.css
+++ b/src/app/pages/property-info/property-info.css
@@ -29,6 +29,10 @@ body {
   max-width: 1200px;
 
 }
+.bookinCalender{
+  max-width: 1200px;
+
+}
 
 .row {
   margin: 0; /* Avoid negative margin causing overflow */
