--- a/src/app/pages/add-property/step-1/step1-3-what-type/step1-3-what-type.html
+++ b/src/app/pages/add-property/step-1/step1-3-what-type/step1-3-what-type.html
@@ -26,12 +26,7 @@
                 <path d="M19 19C19 19.5523 18.5523 20 18 20C17.4477 20 17 19.5523 17 19C17 18.4477 17.4477 18 18 18C18.5523 18 19 18.4477 19 19Z" fill="#222222"/>
                 <path d="M7 28H25" stroke="#222222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
-              <svg *ngSwitchCase="'shared'" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M24 10H8C7.44772 10 7 9.55228 7 9V5C7 4.44772 7.44772 4 8 4H24C24.5523 4 25 4.44772 25 5V9C25 9.55228 24.5523 10 24 10Z" stroke="#222222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M24 28H8C7.44772 28 7 27.5523 7 27V23C7 22.4477 7.44772 22 8 22H24C24.5523 22 25 22.4477 25 23V27C25 27.5523 24.5523 28 24 28Z" stroke="#222222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M11 10V22" stroke="#222222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M21 10V22" stroke="#222222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
+              <img *ngSwitchCase="'shared'" src="https://img.icons8.com/?size=100&id=4024&format=png&color=000000" alt="Shared Icon">
             </ng-container>
           </div>
         </button>
@@ -39,4 +34,3 @@
     </div>
   </div>
 </div>
-<app-footer></app-footer>
