--- a/src/app/pages/add-property/step-2/step2-3-1-add-photos/step2-3-1-add-photos.html
+++ b/src/app/pages/add-property/step-2/step2-3-1-add-photos/step2-3-1-add-photos.html
@@ -18,10 +18,7 @@
         [class.highlight]="dropzoneHighlight"
       >
         <div class="uploader-icon">
-          <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-            <path d="M42 20.24V14a2 2 0 0 0-2-2H10a2 2 0 0 0-2 2v36a2 2 0 0 0 2 2h30a2 2 0 0 0 2-2V30.87l10.4 10.39a1 1 0 0 0 1.4-1.42L43.4 28.44a4 4 0 0 0-5.67-5.67l-5.3 5.3-5.5-5.5a1 1 0 0 0-1.4 0l-11 11V14a2 2 0 0 0-2-2H2v36a2 2 0 0 0 2 2h38a2 2 0 0 0 2-2V20.24zM16 22a4 4 0 1 1-4-4 4 4 0 0 1 4 4z" fill="#717171"></path>
-            <path d="M54 12V4a2 2 0 0 0-2-2H16a2 2 0 0 0-2 2v2h2V6h32v20h-2v2h4a2 2 0 0 0 2-2V14a2 2 0 0 0-2-2z" fill="#717171"></path>
-          </svg>
+          <img src="https://a0.muscache.com/im/pictures/mediaverse/mys-amenities-n8/original/c83b2a87-3be4-43c9-ad47-12dd2aee24c4.jpeg" alt="Upload Icon">
         </div>
         <h2 class="uploader-title">Drag your photos here</h2>
         <p class="uploader-text">Choose at least 5 photos</p>
@@ -41,4 +38,3 @@
     </section>
   </main>
 </div>
-<app-footer></app-footer>
