--- a/src/app/pages/add-property/step-2/step2-3-2-photos-modal/step2-3-2-photos-modal.css
+++ b/src/app/pages/add-property/step-2/step2-3-2-photos-modal/step2-3-2-photos-modal.css
@@ -1,11 +1,11 @@
-body,
+/* body,
 html {
   margin: 0;
   padding: 0;
   font-family: "Airbnb Cereal VF", Circular, -apple-system, BlinkMacSystemFont,
     Roboto, "Helvetica Neue", sans-serif;
   background-color: #f7f7f7;
-}
+} */
 
 .button-primary {
   background-color: #222;
