--- a/src/app/pages/add-property/steps-page/steps-page.html
+++ b/src/app/pages/add-property/steps-page/steps-page.html
@@ -1,6 +1,9 @@
 <div class="steps-container">
+  <header class="steps-header">
+    <h1 class="steps-main-title">It's easy to get started on Airbnb</h1>
+  </header>
+
   <main class="steps-list">
-    <!-- Step 1 -->
     <div class="step">
       <div class="step__number">1</div>
       <div class="step__text-content">
@@ -14,17 +17,17 @@
           class="step__image"
           src="https://a0.muscache.com/4ea/air/v2/pictures/da2e1a40-a92b-449e-8575-d8208cc5d409.jpg"
           alt="Illustration of a house with a checklist."
-          decoding="async" />
+          decoding="async"
+        />
       </div>
     </div>
 
-    <!-- Step 2 -->
     <div class="step">
       <div class="step__number">2</div>
       <div class="step__text-content">
         <h2 class="step__title">Make it stand out</h2>
         <p class="step__description">
-          Add 5 or more photos plus a title and description—we’ll help you out.
+          Add 5 or more photos plus a title and description—we'll help you out.
         </p>
       </div>
       <div class="step__image-container">
@@ -32,11 +35,11 @@
           class="step__image"
           src="https://a0.muscache.com/4ea/air/v2/pictures/bfc0bc89-58cb-4525-a26e-7b23b750ee00.jpg"
           alt="Illustration of a camera and photos."
-          decoding="async" />
+          decoding="async"
+        />
       </div>
     </div>
 
-    <!-- Step 3 -->
     <div class="step">
       <div class="step__number">3</div>
       <div class="step__text-content">
@@ -50,9 +53,9 @@
           class="step__image"
           src="https://a0.muscache.com/4ea/air/v2/pictures/c0634c73-9109-4710-8968-3e927df1191c.jpg"
           alt="Illustration of a person celebrating with a trophy."
-          decoding="async" />
+          decoding="async"
+        />
       </div>
     </div>
   </main>
 </div>
-<app-footer></app-footer>
