--- a/src/app/pages/add-property/step-1/step1-1-tell-us/step1-1-tell-us.css
+++ b/src/app/pages/add-property/step-1/step1-1-tell-us/step1-1-tell-us.css
@@ -9,8 +9,8 @@
   font-size: 14px;
   line-height: 1.4;
   background-color: #fff;
-  padding: 88px 80px 82px;
-  min-height: 100vh;
+  /* padding: 88px 80px 82px; */
+  /* min-height: 100vh; */
 }
 
 .intro-section {
