--- a/src/app/pages/add-property/step-1/step1-3-what-type/step1-3-what-type.css
+++ b/src/app/pages/add-property/step-1/step1-3-what-type/step1-3-what-type.css
@@ -1,17 +1,17 @@
-body {
+/* body {
   font-family: "Airbnb Cereal VF", Circular, -apple-system, BlinkMacSystemFont,
     Roboto, "Helvetica Neue", sans-serif;
   color: #222;
   background-color: #fff;
   margin: 0;
-}
+} */
 
 .page-container {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  min-height: 100vh;
-  padding: 88px 80px;
+  /* min-height: 100vh; */
+  /* padding: 88px 80px; */
   box-sizing: border-box;
 }
 
