--- a/src/app/pages/add-property/step-1/step1-4-2-confirm-address/step1-4-2-confirm-address.css
+++ b/src/app/pages/add-property/step-1/step1-4-2-confirm-address/step1-4-2-confirm-address.css
@@ -1,4 +1,4 @@
-body,
+/* body,
 html {
   margin: 0;
   padding: 0;
@@ -7,15 +7,15 @@ html {
     Roboto, "Helvetica Neue", sans-serif;
   color: #222;
   background-color: #fff;
-}
+} */
 
 .page-container {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding: 88px 24px;
+  /* padding: 88px 24px; */
   box-sizing: border-box;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .content-container {
