--- a/src/app/pages/add-property/step-2/step2-1-make-your/step2-1-make-your.css
+++ b/src/app/pages/add-property/step-2/step2-1-make-your/step2-1-make-your.css
@@ -1,4 +1,4 @@
-body,
+/* body,
 html {
   margin: 0;
   padding: 0;
@@ -7,15 +7,15 @@ html {
     Roboto, "Helvetica Neue", sans-serif;
   color: #222;
   background-color: #fff;
-}
+} */
 
 .page-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 88px 80px;
+  /* padding: 88px 80px; */
   box-sizing: border-box;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .intro-section {
