--- a/src/app/pages/add-property/step-2/step2-2-tell-guests/step2-2-tell-guests.css
+++ b/src/app/pages/add-property/step-2/step2-2-tell-guests/step2-2-tell-guests.css
@@ -1,19 +1,7 @@
-body,
-html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  font-family: "Airbnb Cereal VF", Circular, -apple-system, BlinkMacSystemFont,
-    Roboto, "Helvetica Neue", sans-serif;
-  color: #222;
-  background-color: #fff;
-}
-
 .page-container {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding: 88px 24px;
   box-sizing: border-box;
 }
 
@@ -91,11 +79,11 @@ html {
   margin-bottom: 8px;
 }
 
-.amenity-icon svg {
+.amenity-icon img {
   width: 100%;
   height: 100%;
   display: block;
-  fill: #222;
+  object-fit: contain;
 }
 
 .amenity-label {
