--- a/src/app/pages/add-property/step-2/step2-5-describe/step2-5-describe.css
+++ b/src/app/pages/add-property/step-2/step2-5-describe/step2-5-describe.css
@@ -1,4 +1,4 @@
-body,
+/* body,
 html {
   margin: 0;
   padding: 0;
@@ -7,13 +7,13 @@ html {
     Roboto, "Helvetica Neue", sans-serif;
   color: #222;
   background-color: #fff;
-}
+} */
 
 .page-container {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding: 88px 24px;
+  /* padding: 88px 24px; */
   box-sizing: border-box;
 }
 
