--- a/src/app/pages/add-property/step-3/step3-4-1-pricing/step3-4-1-pricing.css
+++ b/src/app/pages/add-property/step-3/step3-4-1-pricing/step3-4-1-pricing.css
@@ -1,4 +1,4 @@
-body,
+/* body,
 html {
   margin: 0;
   padding: 0;
@@ -7,15 +7,15 @@ html {
     Roboto, "Helvetica Neue", sans-serif;
   color: #222;
   background-color: #fff;
-}
+} */
 
 .page-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 88px 24px;
+  /* padding: 88px 24px; */
   box-sizing: border-box;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .content-wrapper {
@@ -53,6 +53,7 @@ html {
   align-items: center;
   justify-content: center;
   font-weight: 700;
+  margin-left: 65px;
   color: #222;
 }
 
@@ -83,6 +84,11 @@ html {
   border: 1px solid #ddd;
   border-radius: 12px;
   overflow: hidden;
+  display: none;
+}
+
+.price-breakdown.visible {
+  display: block;
 }
 
 .breakdown-card {
@@ -124,6 +130,20 @@ html {
   font-family: inherit;
   font-size: 14px;
   font-weight: 500;
-  text-decoration: underline;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.arrow {
+  display: inline-block;
+  font-size: 12px;
+  transition: transform 0.2s ease;
+}
+
+.arrow.up {
+  transform: rotate(180deg);
 }
