--- a/src/app/pages/add-property/step-3/step3-4-1-pricing/step3-4-1-pricing.html
+++ b/src/app/pages/add-property/step-3/step3-4-1-pricing/step3-4-1-pricing.html
@@ -19,7 +19,7 @@
         />
       </div>
 
-      <div class="price-breakdown">
+      <div class="price-breakdown" [class.visible]="isBreakdownVisible">
         <!-- Guest Price View -->
         <div class="breakdown-card" [class.active]="view === 'guest'">
           <div class="breakdown-details">
@@ -69,9 +69,9 @@
         </div>
       </div>
       <button type="button" class="toggle-view-button" (click)="toggleView()">
-        {{ view === 'guest' ? "Show what you'll earn" : 'Show guest price' }}
+        <span>{{ isBreakdownVisible ? 'Hide price details' : "Show what you'll earn" }}</span>
+        <span class="arrow" [class.up]="isBreakdownVisible">&#11206;</span>
       </button>
     </div>
   </main>
 </div>
-<app-footer></app-footer>
