--- a/src/app/pages/add-property/steps-page/steps-page.css
+++ b/src/app/pages/add-property/steps-page/steps-page.css
@@ -2,23 +2,46 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 2rem;
+  align-items: center;
+  padding: 0px 80px;
   box-sizing: border-box;
   color: #222;
-  font-family: "Airbnb Cereal VF", Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+  font-family: "Airbnb Cereal VF", Circular, -apple-system, BlinkMacSystemFont,
+    Roboto, "Helvetica Neue", sans-serif;
   font-size: 14px;
   line-height: 1.4;
   background-color: #fff;
+  /* min-height: 100%; */
+  width: 100%;
+  overflow: hidden;
 }
 
 .steps-header {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   max-width: 700px;
   margin-right: 48px;
   box-sizing: border-box;
+}
+
+.get-started-button {
+  margin-top: 24px;
+  padding: 14px 24px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+  background-color: #FF385C;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.get-started-button:hover {
+  background-color: #E31C5F;
 }
 
 .steps-main-title {
@@ -40,7 +63,7 @@
   flex-direction: row;
   align-items: flex-start;
   padding-bottom: 32px;
-  border-bottom: 1px solid #EBEBEB;
+  border-bottom: 1px solid #ebebeb;
   box-sizing: border-box;
 }
 
